# curly-videoplayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/ISSUE_TEMPLATE/: bug_repro.yml
cmake/: CPackPostBuildSign.cmake
docs/: repro-checklist.md
docs/plans/: 2026-02-08-provideo-like-qt-design.md  2026-02-08-v1-5-expansion.md
packaging/windows/: README.md  build-windows-release.ps1  sign-windows-artifacts.ps1
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/control/: ArtnetInputService.cpp  ArtnetInputService.h  FailoverSyncService.cpp  FailoverSyncService.h  MidiInputService.cpp  MidiInputService.h  OscServer.cpp  OscServer.h
src/controllers/: OutputRouter.cpp  OutputRouter.h  PlaybackController.cpp  PlaybackController.h
src/core/: AppConfig.h  Cue.h  CueListModel.cpp  CueListModel.h  Transition.h
src/display/: DisplayManager.cpp  DisplayManager.h
src/ndi/: NdiBridge.cpp  NdiBridge.h
src/output/: DeckLinkBridge.cpp  DeckLinkBridge.h  EdgeBlendOverlay.cpp  EdgeBlendOverlay.h  LayerSurface.cpp  LayerSurface.h  OutputCalibration.h  OutputWindow.cpp  OutputWindow.h  PreviewWindow.cpp  PreviewWindow.h  SyphonBridge.cpp  SyphonBridge.h
src/player/: IPlayer.h  MpvPlayer.cpp  MpvPlayer.h
src/project/: ProjectSerializer.cpp  ProjectSerializer.h
tests/: smoke_project_serializer.cpp
